<resources>
    <string name="app_name">KOTLIN MVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="cfrm_password">Confirm Password</string>
    <string name="select_plan">Select Plan</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_now">Dont have a Account Register Now</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login_now">Already have an account Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    Dashboard Text -->
    <string name="today_s">Today\'s</string>
    <string name="follow_up">Follow Up</string>
    <string name="rejected">Rejected</string>
    <string name="deal">Deal</string>
    <string name="customer_name">Customer Name</string>
    <string name="call">CALL</string>

</resources>