<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center_vertical"
                android:padding="16dp"
                android:id="@+id/username"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome User" />
            <Button
                android:text="Active"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/border_cornered"
                    android:layout_height="100dp"
                    android:layout_weight="0.8">
                    <TextView
                        android:id="@+id/todays_tv"
                        android:text="0"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="38sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="bottom"
                        android:text="@string/today_s"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/border_cornered"
                    android:layout_height="100dp"
                    android:layout_weight="0.8">
                    <TextView
                        android:id="@+id/followup_tv"
                        android:text="0"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="38sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="bottom"
                        android:text="@string/follow_up"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/border_cornered"
                    android:layout_height="100dp"
                    android:layout_weight="0.8">
                    <TextView
                        android:id="@+id/rejected_tv"
                        android:text="0"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="38sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="bottom"
                        android:text="@string/rejected"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/border_cornered"
                    android:layout_height="100dp"
                    android:layout_weight="0.8">
                    <TextView
                        android:id="@+id/deal_tv"
                        android:text="0"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="38sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_gravity="bottom"
                        android:text="@string/deal"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:padding="16dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Customer List" />
        <View
            android:background="@color/colorTextHintDefault"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_rv"
            tools:listitem="@layout/customer_itemview_layout"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</FrameLayout>